# SRLTCPv2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cleanup.bat  cleanup.sh  run.bat  run.sh
.github/workflows/: release.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/srltcp/v2/: AndroidInit.kt  AppVisibility.kt  MainActivity.kt  SrltcpApplication.kt  SrltcpEngineHolder.kt
android/app/src/main/java/com/srltcp/v2/data/: AppPreferences.kt
android/app/src/main/java/com/srltcp/v2/service/: SrltcpAlertNotifier.kt  SrltcpForegroundService.kt
android/app/src/main/java/com/srltcp/v2/ui/: PeersSheet.kt  SettingsSheet.kt
android/app/src/main/java/com/srltcp/v2/ui/theme/: Theme.kt
android/app/src/main/java/com/srltcp/v2/webrtc/: WebRtcCallManager.kt  WebRtcCallManagerHolder.kt
android/app/src/main/res/drawable/: ic_launcher.xml  ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
core/: Cargo.toml  build.rs
core/benches/: ratchet_bench.rs
core/examples/: lan_test.rs  peer_listen.rs  peer_test.rs  quic_loopback.rs
core/src/: android_init.rs  lib.rs  qr_image.rs  srltcp_core.udl
core/src/crypto/: handshake.rs  identity.rs  mod.rs  peer_crypto.rs  ratchet.rs  wire.rs
core/src/network/: iroh_transport.rs  local.rs  mod.rs  quic.rs
core/src/p2p/: engine.rs  mod.rs
core/src/protocol/: message.rs  mod.rs
core/src/serial/: frame.rs  mod.rs  reliability.rs  transport.rs
core/src/transfer/: chunked.rs  compress.rs  mod.rs
core/src/webrtc/: mod.rs
core/tests/: identity_persistence.rs  peer_alias.rs  qr_v4_parsing.rs  signal_kat.rs  wire_encryption.rs
desktop/src/: app.js  index.html  styles.css  webrtc.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  BUILD.md  CRYPTO.md  README.md  SECURITY.md  SERIAL_PROTOCOL.md  USER_GUIDE.md
scripts/: assemble-apk.sh  build-android.sh  build-desktop.sh  cleanup-android-build.sh  create-github-release.sh
scripts/lib/: android-env.sh  version.sh
