[workspace]
resolver = "2"
members = [
    "core",
    "desktop/src-tauri",
]
exclude = ["android"]

[workspace.package]
version = "0.2.25"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SRLTCP Contributors"]
repository = "https://github.com/narl3yyy-svg/SRLTCPv2"
description = "Secure Reliable LAN/TCP/Serial P2P messaging — v0.2.22"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }