[package]
name = "srltcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SRLTCP v0.2.8 core library — crypto, serial, P2P networking"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "srltcp_core"

[features]
default = ["desktop"]
desktop = ["dep:serialport"]
android = []

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true

# Serial transport (desktop only — not available on Android)
cobs = "0.3"
crc32fast = "1.4"

# Crypto — hardware-accelerated via aws-lc-rs
aws-lc-rs = "1.12"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
snow = "0.9"

# Post-quantum ML-KEM-768
ml-kem = { version = "0.3", features = ["getrandom"] }

# Networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rcgen = "0.13"

# QR code generation
qrcode = "0.14"
image = "0.25"

# Serial transport (desktop only)
serialport = { version = "4.6", optional = true }

# UniFFI bindings for Android/Kotlin
uniffi = { version = "0.28", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = []

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"