[package]
name = "srltcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SRLTCP core library — crypto, serial, P2P networking"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "srltcp_core"

[features]
default = ["desktop"]
desktop = ["dep:serialport"]
android = []

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true

# Serial transport (desktop only — not available on Android)
cobs = "0.3"
crc32fast = "1.4"

# Crypto — hardware-accelerated via aws-lc-rs (iroh/transitive + available for AEAD)
aws-lc-rs = "1.12"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
hkdf = "0.12"
# Post-quantum ML-KEM-768 (Wycheproof/ACVP-tested; not third-party audited)
ml-kem = { version = "0.3", features = ["getrandom"] }
# Signal-spec Double Ratchet — pre-release; see docs/SECURITY.md residual risks
double-ratchet-2 = "0.4.0-pre.2"
zeroize = { version = "1", features = ["derive"] }

# Networking — iroh NAT traversal (relay + hole punch)
iroh = "1"
iroh-tickets = "1"

# QR code generation (PNG only — keep APK/desktop lean)
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

# Folder transfer compression (streaming, fast on low-end hardware)
zstd = "0.13"

# Compact binary wire format (v0.2.12+)
postcard = { version = "1", features = ["alloc"] }

# Serial transport (desktop only)
serialport = { version = "4.6", optional = true }

# UniFFI bindings for Android/Kotlin
uniffi = { version = "0.28", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = []

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
criterion = "0.5"
uuid = { workspace = true }
chrono = { workspace = true }

[[bench]]
name = "ratchet_bench"
harness = false
