[package]
name = "srltcp-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SRLTCP v0.2.0 desktop application (Tauri v2)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
srltcp-core = { path = "../../core", features = ["desktop"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
signal-hook = { version = "0.3", features = ["iterator"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]